<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MeetUpsFellow</string>
    <string name="APPLICATION_ID">ca-app-pub-9821745744044932~5968422250</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_create_profile">Create Profile</string>
    <string name="title_create_event">Create Event</string>
    <string name="title_create_group">Create Group</string>
    <string name="title_add_members">Add Members</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="title_settings">Account Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_nearby">Around You</string>
    <string name="title_chat">Messages</string>
    <string name="title_favorites">Favorite Fellows</string>
    <string name="title_interested_people">Interested People</string>
    <string name="title_change_number">Change Number</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_meetups">Meetups</string>
    <string name="title_notifications_setting">Notifications Settings</string>
    <string name="title_private_album">Media Album</string>
    <string name="title_private_album_access">Manage Access</string>
    <string name="title_recent_album">Recent Pictures</string>
    <string name="title_refresh">Refresh</string>
    <string name="no_plan_yet">You haven\'t purchased a plan yet</string>
    <string name="becomeProTxt">You are a Free member, <u>\"Become Premium\"</u></string>
    <string name="renew_subscription">Your membership has expired. Please renew it to reactivate the services."</string>
    <string name="txt_img_note">* All uploaded images are subjected to admin review. Please ensure that all the uploaded images are appropriate.</string>
    <string name="text_upload_private">Click to Access/Upload to Private Album</string>
    <string name="read_more"><b><font color="#ff0099cc" size="20"> Read more</font></b></string>
    <string name="search_hint">Search..</string>
    <string name="membership_free">Free</string>
    <string name="membership_special">Special</string>
    <string name="membership_standard">Standard</string>
    <string name="membership_premium">Premium</string>
    <string name="membership_featured">Featured</string>
    <string name="make_public">Make your profile public</string>
    <string name="make_privet">Make your profile private</string>
    <string name="make_privet_hint">Free membership doesn\'t allow to make profile private or hidden.</string>
    <string name="upgrade_plan_for_private">This membership doesn\'t allow to make you profile private or hidden.</string>
    <string name="upgrade_plan_for_event">This membership doesn\'t allow to create event.</string>
    <string name="free_user_event_note">Free membership doesn\'t allow to create Event.</string>
    <string name="event_limit_note">You don\'t have limit add to add new event.</string>
    <string name="hide_profile_checkbox_text">Are you sure you want to hide your profile? It will be invisible to everyone on the platform.</string>
    <string name="unhide_profile_checkbox_text">Your profile will also be visible to everyone.</string>
    <string name="want_to_privet_profile">Are you sure you want to make your profile private? Only your connections will be able to view your profile.</string>
    <string name="want_to_privet_profile_premium">Are you sure you want to privet your profile?, will only be able to see your connection or no one can see.</string>
    <string name="want_to_privet_profile_featured">Are you sure you want to privet your profile?, will only be able to see your connection only &amp; You can hide your profile if you want </string>
    <string name="want_to_public_profile">"Are you sure you want to make your profile public? Anyone on the platform will be able to view your profile information.</string>
    <string name="your_media_album_public">Your media album is publicly accessible. Anyone on the platform can view it. To limit access, adjust your privacy settings.</string>
    <string name="your_media_album_privet">Your media album is set to private. Only you can view it. To change this setting, adjust your privacy preferences</string>
    <string name="your_media_album_privet_connected">Your media is visible only to your connections. If you\'d like to share it with a broader audience or keep it more restricted, update your privacy settings.</string>
    <string name="your_media_album_selected_connection">Your media is shared with specific members only. To modify who can view this content, update your selected members in the privacy settings.</string>
    <string name="you_sent_connection_request">Your connection request is pending. The member has not yet responded. You’ll be notified once they take action. You can also retract the request from your sent connections list.</string>
    <string name="you_receiver_connection_request">You have a pending connection request from this user. Please review and respond in your notifications or received connections list.</string>
    <string name="you_not_connect">It seems you are no longer connected. To continue the chat, please connect with each other.</string>
    <string name="deactivate_your_account">Are you sure you want to deactivate your account? You can reactivate it anytime by logging back in.</string>
    <string name="delete_your_account">Are you sure you want to permanently delete your account? This action cannot be undone, and all your data will be lost.</string>
    <string name="your_chat_list_is_empty">Your chat list is empty right now. Start a new conversation to connect with others and keep the chat going. \n Don’t miss out—reach out and make some new connections!</string>
    <string name="limited_chat_history">You can only view chat history from the last 3 days with your current membership. Upgrade to access your full message history.</string>
    <string name="restricted_video_uploading">Video uploads are restricted on your current plan. Upgrade to upload videos in your media album.</string>
    <string name="you_cannot_restrict_your_media_album">You cannot restrict your media album visibility with your current membership. Upgrade to control who sees your media.</string>
    <string name="text_no_connection_user">You don\'t have any users connected user at the moment.</string>
    <string name="text_no_connection_request">You don\'t have any users connected request at the moment.</string>
    <string name="text_no_connection_request_sent">You don\'t have any users connection request sent at the moment.</string>
    <string name="text_no_block_user">You don\'t have any users blocked at this time.</string>
    <string name="user_profile_privet">This user has set their profile to private, You must connect to view their profile.</string>
    <string name="you_send_100_word_only">You are not connect from this user, you can send only one text SMS length of 150 words only.</string>
    <string name="reach_your_media_uploading">You\u2019ve reached your space limit for uploading media content under your current membership plan. Upgrade to increase your storage capacity and continue uploading content.</string>
    <string name="upgrade_plan">You haven\'t purchased a plan yet. \n please upgrade your plan than try again.</string>
    <string name="clear_all_chat">Do you want to clear all chats?</string>
    <string name="disable_pin_code">Disable PIN code?</string>
    <string name="enable_pin_code">Enable PIN code?</string>
    <string name="disable_fingerprint">Disable fingerprint?</string>
    <string name="enable_fingerprint">Enable fingerprint?</string>
    <string name="text_sent_message">
        <xliff:g id="view">%1$s</xliff:g>
        has sent you a message
    </string>
    <string name="text_shared_photo">
        <xliff:g id="view">%1$s</xliff:g>
        shared a photo with you.
    </string>
    <string name="text_shared_video">
        <xliff:g id="view">%1$s</xliff:g>
        shared a video with you.
    </string>
    <string name="text_shared_file">
        <xliff:g id="view">%1$s</xliff:g>
        shared a file with you.
    </string>
    <string name="text_shared_gif">
        <xliff:g id="view">%1$s</xliff:g>
        shared a gif with you.
    </string>
    <string name="google_server_key">AIzaSyCjVwgXpH_OE3IkhwqF7K6_cGFnCBZUjrc</string>
    <string name="InterstitialAd_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="default_notification_channel_id">meetups_notification</string>
    <string name="chat_notification_channel_id">G2Xo8mV6H9748CCMugPMmAcgZUopSRpu6hlivLF5Dn</string>
    <string name="profile_notification_channel_id">G2Xo8mV6H9748CCMugPMmAcgZUopSlivLF5DnJVc</string>
    <string name="event_notification_channel_id">AIzaSyCjVwgXpH_OE3IkhwqF7K6</string>
    <string name="default_notification_channel_name">MeetupsFellow</string>
    <string name="only_to_admin">(Only visible to MeetUpsFellow Admin.)</string>
    <string name="label_sign_in_text">Sign In with Phone Number</string>
    <string name="label_enter_number_text">Enter your phone number to\n receive the Verification Code</string>
    <string name="label_verify_number_text">Verify Your Number</string>
    <string name="label_verification_text">Please enter the verification code sent to\n your given mobile number
    </string>
    <string name="label_stats_text">Stats</string>
    <string name="label_bio_text">Bio</string>
    <string name="label_username_text">Username:</string>
    <string name="label_age_text">Age:</string>
    <string name="label_hometown_text">Location:</string>
    <string name="label_current_location_text">Current Location:</string>
    <string name="label_twitter_text">Twitter:</string>
    <string name="label_insta_text">Instagram:</string>
    <string name="label_xtube_text">XTube:</string>
    <string name="label_youtube_text">YouTube:</string>
    <string name="label_sex_text">Gender:</string>
    <string name="label_height_text">Height:</string>
    <string name="label_weight_text">Weight:</string>
    <string name="label_height_weight_text">Height &amp; Weight:</string>
    <string name="label_email_text">Email:</string>
    <string name="label_mobile_text">Mobile Number:</string>
    <string name="label_block_text">Blocked Users</string>
    <string name="connect_request">Connect Request</string>
    <string name="label_settings_text">Account Settings</string>
    <string name="label_privacy_text">Privacy &amp; Policy</string>
    <string name="label_pro_feature">Premium Plans</string>
    <string name="label_conditions_text">Terms &amp; Conditions</string>
    <string name="label_support_text">Support Helpline</string>
    <string name="label_how_to_use_text">How to use</string>
    <string name="label_invite">Share App</string>
    <string name="btn_text_add">Add</string>
    <string name="btn_text_search">Search</string>
    <string name="btn_text_save">Upload</string>
    <string name="text_no_events">There are no upcoming events at the moment. Check back later for new events or create your own</string>
    <string name="error_occurred">An error occurred. We\'re deeply sorry.</string>
    <string name="restart_app">Go to Home</string>
    <string name="text_edit_text">Edit text</string>
    <string name="text_version">version
        <xliff:g id="view">%1$s</xliff:g>
    </string>
    <string name="text_location">Location</string>
    <string name="trail_text">14 Day Free Trial</string>
    <string name="upgrade_to_pro">Profile loading is limited on your current plan. Upgrade your membership to view more profiles</string>
    <string name="upgrade_to_pro_see_more">To See More Nearby Fellows</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="text_copy_right">©2025 MeetupsFellow</string>
</resources>