<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlPro"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/inner_img_l">

    <TextView
        android:id="@+id/pro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/upgrade_to_pro"
        android:textColor="@color/gradientEnd"
        android:padding="@dimen/_6sdp"
        android:textSize="@dimen/_10sdp"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/pro_text_tra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/trail_text"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/text_size_button_xxs"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/see_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/upgrade_to_pro_see_more"
        android:textColor="@color/gradientEnd"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone"
        tools:ignore="SpUsage" />

</LinearLayout>
