<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_12sdp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".mvp.view.activities.CustomErrorActivity">

    <ImageView
        android:id="@+id/iv_disappointed_baby"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/ic_baby_disappointed" />

    <TextView
        style="@style/MTS_Body_4.Dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_below="@+id/iv_disappointed_baby"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/error_occurred" />

    <LinearLayout
        android:id="@+id/llRestart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/ic_btn_view_crash"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/MTS_Button.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/restart_app" />
    </LinearLayout>

</RelativeLayout>