<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:elevation="0dp"
    android:theme="@style/AppTheme.AppBarOverlay"
    tools:ignore="NestedWeights,SpUsage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:minHeight="?actionBarSize"
        android:elevation="0dp"
        android:theme="@style/AppTheme.ActionBar2"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/_18sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_arrow" />

            <TextView

                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat_bold"
                android:maxLines="1"
                android:text="@string/title_favorites"
                android:layout_toRightOf="@+id/ivBack"
                android:textAllCaps="false"
                android:textColor="@color/colorRed" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:id="@+id/rlUpload"
                android:layout_height="@dimen/inner_img_xxxl"
                android:paddingRight="@dimen/inner_img_xl_2"
                tools:ignore="spUsage"
                android:paddingLeft="0dp"
                android:layout_centerInParent="true"
                android:layout_toStartOf="@+id/myAccessImg"
                android:visibility="gone"
                android:paddingEnd="@dimen/inner_img_xl_2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_corner_btn_new"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center"
                    android:paddingStart="@dimen/inner_img_xl_2"
                    android:paddingEnd="@dimen/inner_img_xl_2"
                    android:text="@string/btn_text_save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_button_xs" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/myAccessImg"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/access"
                android:layout_marginEnd="@dimen/_8sdp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/myAceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:fontFamily="@font/montserrat_medium"
                android:text="Manage Access"
                android:textColor="@color/black"
                android:textSize="@dimen/_6sdp"
                android:visibility="gone" />


        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

</com.google.android.material.appbar.AppBarLayout>